--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ form {
   font-size: 16px;
 }
 .button {
-  width: 25%;
+  width: 130px;
   border-radius: 30px;
   border: none;
   color: #ebebeb;
