--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ form {
   border-radius: 10px;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   margin-bottom: 30px;
+  display: flex;
 }
 
 .codeword {
