--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ form {
   display: flex;
 }
 
-.codeword {
+.date-of-birth {
   width: 65%;
   padding: 16px;
   font-family: Indie flower, sans-serif;
