--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ form {
   border-left: 3px solid #2f3c4f;
 }
 
+.hidden {
+  display: none;
+}
+
 footer {
   margin-top: 30px;
   font-weight: 900;
